--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,6 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 
-  <script src="/js/main.js"></script>
+  <script src="{{ site.baseurl }}/js/main.js"></script>
 
 </head>
